website/src/assets/app.css
/* Overwriting bootstrap defaults */

a {
    text-decoration: none;
}

:root {
    --blue: #007bff;
    --indigo: #6610f2;
    --purple: #6f42c1;
    --pink: #e83e8c;
    --red: #dc3545;
    --orange: #fd7e14;
    --yellow: #ffc107;
    --green: #28a745;
    --teal: #20c997;
    --cyan: #17a2b8;
    --white: #fff;
    --gray: #6c757d;
    --gray-dark: #343a40;
    --primary: #007bff;
    --secondary: #6c757d;
    /*--success: #28a745;*/
    --info: #17a2b8;
    --warning: #ffc107;
    --danger: #dc3545;
    --light: #f8f9fa;
    --dark: #343a40;
    --breakpoint-xs: 0;
    --breakpoint-sm: 576px;
    --breakpoint-md: 768px;
    --breakpoint-lg: 958px;
    --breakpoint-xl: 1200px;
    --font-family-sans-serif: 'SLMN-Industry', sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
    --font-family-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;

    --theme: #66d9ff;
    --success: var(--theme);


    --brand-theme: var(--theme);
    --brand-light: #f9f9f9;
    --brand-dark: #202020;
}

@font-face {
    font-family: 'SLMN-Industry';
    src: url('/assets/fonts/INDUSTRY-MEDIUM.woff2') format("woff"), url('/assets/fonts/INDUSTRY-MEDIUM.ttf') format("ttf");
    font-weight: 400;
}
@font-face {
    font-family: 'SLMN-Industry';
    src: url('/assets/fonts/INDUSTRY-DEMI.woff2') format("woff"), url('/assets/fonts/INDUSTRY-DEMI.ttf') format("ttf");
    font-weight: 600;
}
@font-face {
    font-family: 'SLMN-Industry';
    src: url('/assets/fonts/INDUSTRY-BOLD.woff2') format("woff"), url('/assets/fonts/INDUSTRY-BOLD.ttf') format("ttf");
    font-weight: 700;
}

body.website {
    background: var(--brand-dark);
    color: var(--brand-light);
    font-family: sans-serif;
}

body.website {
    font: 1rem/1.5 var(--font-family-sans-serif);
}
h1, h2, h3, h4, h5, h6 {
    font-weight: bold;
    text-transform: uppercase;
}
nav {
    text-transform: uppercase;
}
img.navbar-image {
    max-height: 30px;
}

a:not(.link-text), a:not(.link-text):hover {
    color: var(--theme);
}
.dropdown-item.active, .dropdown-item:active {
    background-color: var(--blue);
    color: white !important;
}
.dropdown-item {
    text-transform: uppercase;
}

/*.btn:hover:not(:disabled), .btn.hover:not(:disabled) {*/
/*    background-color: #00a367 !important;*/
/*    border-color: #00a367 !important;*/
/*}*/
/*.btn:focus:not(:disabled), .btn.focus:not(:disabled) {*/
/*    background-color: #009357 !important;*/
/*    border-color: #009357 !important;*/
/*}*/

#slmngg-app {
    padding-bottom: 32px;
}
.navbar-text b {
    padding: 0 1px;
}


img.navbar-image {
    max-height: 40px;
    margin-top: -6px;
    margin-bottom: -6px;
    margin-left: -6px;
}

nav[type="dark"] {
    background-color: rgba(0,0,0,0.5);
}

.flex-center {
    display: flex;
    justify-content: center;
    align-items: center;
}

.bg-center {
    background-size: contain;
    background-position: center;
    background-repeat: no-repeat;
}
[v-cloak] {
    display: none !important;
}

.container>h1 {
    margin-top: 8px;
}

a.link-text {
    text-decoration: none;
}

@media (min-width: 1900px) {
    .col-xxl-2 {
        -ms-flex: 0 0 12.5%;
        flex: 0 0 12.5%;
        max-width: 12.5%;
    }
}

.content-item {
    line-height: 1 !important;
    min-height: 45px;
}


.f-col { display: flex; flex-direction: column; }
.f-row { display: flex; flex-direction: row; }

.navbar-nav .nav-item, .navbar-nav div {
    line-height: 1;
    text-align: center;
    display: flex;
    justify-content: center;
    align-items: center;
}

a.no-link-style, a.no-link-style:hover,
a.nav-link.no-link-style, a.nav-link.no-link-style:hover {
    display: block;
    text-decoration: none;
    color: inherit;
}

.nav-link {
    --bs-navbar-active-color: #fff;
}



/* global transitions */

.fade-enter-active, .fade-leave-active { transition: opacity 250ms ease; }
.fade-enter-from, .fade-leave-to { opacity: 0; }
.fade-enter-to, .fade-leave-from { opacity: 1; }

body.overlay {
    background: transparent;
    background-color: transparent;
}
.industry-align {
    transform: var(--overlay-line-height-adjust, translate(0, -0.0925em));
    --translate-y: -0.0925em;
}

h1.big {
    font-size: 4em;
}

.default-thing {
    background-color: rgba(255, 255, 255, 0.1);
    background-color: #373737;
    border-color: rgba(255, 255, 255, 0.2);
    color: rgb(255, 255, 255);
    transition: background-color .2s, border-color .2s, color .2s;
}
/* no-link-style has color:inherit which affects border-color if on some links
   the extra specificity helps to override that */
.no-link-style.default-thing {
    border-color: rgba(255, 255, 255, 0.2);
}
a.default-thing {
    color: rgb(255,255,255);
}

.default-thing-border-bg {
    background-color: rgba(255, 255, 255, 0.2);
    color: rgb(255, 255, 255);
    transition: background-color .2s, border-color .2s, color .2s;
}
.border-transparent {
    border-color: transparent !important;
}

.text-dark-low {
    color: #343a40
}

a.text-dark-low:focus, a.text-dark-low:hover {
    color: #121416
}


.ct-passive { color: var(--theme-passive, #ffffff); }
.ct-active { color: var(--theme-active, #66d9ff); }
.ct-dark { color: var(--theme-dark, #222222); }
.ct-ondark { color: var(--theme-ondark, #ffffff); }

a.ct-passive:hover,
.ct-passive a:hover,
.ct-passive:hover a {
    color: var(--theme-active, #66d9ff);
}

.modal-content {
    color: #222;
}

/* hide arrows on input[type=number] https://stackoverflow.com/a/4298216 */

input.no-arrows::-webkit-outer-spin-button,
input.no-arrows::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
}
input.no-arrows[type=number] {
    -moz-appearance:textfield;
}

.notyf__ripple {
    width: 500px;
    height: 500px;
}

.table.border-no-top tr:first-child td,
.table.border-no-top tr:first-child th {
    border-top: none;
}

.table-dark {
    /*border-color: #3c3e3f;*/
    --bs-table-bg: #343a40;
}

.gap-1 {
    gap: .25rem;
}
.gap-2 {
    gap: .5rem;
}
.gap-3 {
    gap: 1rem;
}
.gap-4 {
    gap: 1.5rem;
}

.mr-0 {
    margin-right: 0 !important;
}

.mr-1 {
    margin-right: 0.25rem !important;
}

.mr-2 {
    margin-right: 0.5rem !important;
}

.mr-3 {
    margin-right: 1rem !important;
}

.mr-4 {
    margin-right: 1.5rem !important;
}

.mr-5 {
    margin-right: 3rem !important;
}

.mr-auto {
    margin-right: auto !important;
}

.ml-0 {
    margin-left: 0 !important;
}

.ml-1 {
    margin-left: 0.25rem !important;
}

.ml-2 {
    margin-left: 0.5rem !important;
}

.ml-3 {
    margin-left: 1rem !important;
}

.ml-4 {
    margin-left: 1.5rem !important;
}

.ml-5 {
    margin-left: 3rem !important;
}

.ml-auto {
    margin-left: auto !important;
}
.text-left {
    text-align: left !important;
}
.text-right {
    text-align: right !important;
}
.btn-block {
    display: block;
}
.text-muted {
    color: #6c757d !important;
}
small.text-body-secondary {
    color: white !important;
}

.opacity-changes {
    opacity: 1;
    transition: opacity .3s ease;
}
.low-opacity {
    opacity: 0.5;
    pointer-events: none;
    cursor: wait;
}

.dark-border {
    border: 1px solid #454d55;
}

@media (min-width: 768px) {
    .w-md-25 { width: 25% !important; }
    .w-md-33 { width: 33% !important; }
    .w-md-50 { width: 50% !important; }
    .w-md-67 { width: 67% !important; }
    .w-md-75 { width: 75% !important; }
    .w-md-100 { width: 100% !important; }
}


.dark-scrollbar::-webkit-scrollbar-track {
    border-radius: 4px;
    background-color: transparent;
}

.dark-scrollbar::-webkit-scrollbar {
    width: 6px;
    height: 6px;
    background-color: transparent;
}

.dark-scrollbar::-webkit-scrollbar-thumb {
    border-radius: 4px;
    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3);
    background-color: #222;
    transition: background-color 300ms ease;
}

.dark-scrollbar:hover::-webkit-scrollbar-thumb,
.dark-scrollbar:active::-webkit-scrollbar-thumb {
    background-color: #333;
}

.guide-image {
    border-radius: .25em;
    border: 1px solid rgba(255,255,255,0.1);
    margin-bottom: .5em;
    max-width: 100%;
}

pre.dev {
    background-color: #222;
    color: white;
    top: 0;
    left: 0;
    padding: .5em;
    font-size: 12px;
}

.text-monospace {
    font-family: var(--font-family-monospace), monospace;
}

.cut-icon.icon-marvel {
    min-width: 1.25em;
    min-height: 1.25em;
    width: 100%;
    height: 100%;
    background-position: center;
    background-repeat: no-repeat;
    mask-position: center;
    mask-repeat: no-repeat;
    mask-size: contain;
    background-color: currentColor;
    vertical-align: middle;
}

